@@ -135,6 +135,19 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>May 26th 2008</h3>
+          <p>
+          Stable verson 2.22.2 was released!
+          New features since previous stable version include:
+          </p>
+          <ul>
+            <li>cheese crashed, when a file was deleted twice</li>
+            <li>fixed regression of gio, which disabled DnD</li>
+            <li>fixed invalid free in cheese</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-May/msg00042.html">full release notes</a>)
+
           <h3>May 12th 2008</h3>
           <p>
           Unstable verson 2.23.2 was released!
@@ -167,22 +180,6 @@
           </ul>
           <a href="download.html">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-April/msg00066.html">full release notes</a>)
-
-          <h3>April 7th 2008</h3>
-          <p>
-          Stable verson 2.22.1 was released!
-          New features since previous stable version include:
-          </p>
-          <ul>
-            <li>fix crashing of cheese on some webcam devices</li>
-            <li>allow opening of webcam devices listed in gconf</li>
-            <li>set the max waiting time for detecting a camera to 10 seconds</li>
-            <li>do not allow to take pictures, while the webcam is initializing</li>
-            <li>show our fancy countdown widget by default</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download.html">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-April/msg00026.html">full release notes</a>)
 
         </div>
       </div><!-- bottom -->
